--- a/notificationservice/src/main/resources/application.properties
+++ b/notificationservice/src/main/resources/application.properties
@@ -19,8 +19,8 @@ spring.kafka.consumer.properties.spring.json.trusted.packages=com.mondal.asteroi
 #MailTrap
 spring.mail.host=sandbox.smtp.mailtrap.io
 spring.mail.port=2525
-spring.mail.username=a58c7f4cddd094
-spring.mail.password=a9d8b1e28e6890
+spring.mail.username=*your username*
+spring.mail.password=*your password*
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
